--- a/case1/sd_messier.html
+++ b/case1/sd_messier.html
@@ -17,7 +17,7 @@
    <title>Star Dust Stories: The Messier Marathon</title>
    <link href="sd_base.css" rel="stylesheet"/>
    <link href="sd_layout.css" rel="stylesheet"/>
-   <link href="sd_effects."
+   <link href="sd_effects.css" rel="stylesheet"/>
 </head>
 
 <body>
